WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107930
[BlackBerry] AC layers appear in the wrong place on RTL page
https://bugs.webkit.org/show_bug.cgi?id=107930
Summary
[BlackBerry] AC layers appear in the wrong place on RTL page
Arvid Nilsson
Reported
2013-01-25 02:48:46 PST
PR #280229 The public API of the BlackBerry port always reports a minimum scroll position of (0, 0), even on RTL pages with left overflow. We accomplish this by translating the WebCore scroll position by an amount equal in size to the minimum scroll position, to obtain the API scroll position reported to the API client. This means the API client will ask us to render a rect that needs to be corrected for the minimum scroll position, or we'll render the wrong parts. This is done for BackingStore, but not for WebPageCompositor.
Attachments
Patch
(9.66 KB, patch)
2013-01-25 03:06 PST
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
Patch
(9.66 KB, patch)
2013-01-25 04:34 PST
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2013-01-25 03:06:24 PST
Created
attachment 184713
[details]
Patch
Arvid Nilsson
Comment 2
2013-01-25 04:31:38 PST
Since George is the internal reviewer, and this patch is identical to the internal patch, I'll mark him as upstream reviewer, too.
Arvid Nilsson
Comment 3
2013-01-25 04:34:50 PST
Created
attachment 184725
[details]
Patch
WebKit Review Bot
Comment 4
2013-01-25 05:06:35 PST
Comment on
attachment 184725
[details]
Patch Clearing flags on attachment: 184725 Committed
r140816
: <
http://trac.webkit.org/changeset/140816
>
WebKit Review Bot
Comment 5
2013-01-25 05:06:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug